MonetDB4/tests/BugsViaSourgeforce/Tests/ID.914935.stable.out.oid32
stdout of test 'ID.914935` in directory 'tests/BugsViaSourgeforce` itself:


# 22:18:29 >  
# 22:18:29 >  Mtimeout -timeout 60 Mserver "--config=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/etc/monet.conf" --debug=10 --set "monet_mod_path=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/lib/MonetDB" --set "gdk_dbfarm=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/var/MonetDB/dbfarm" --set "sql_logdir=/var/tmp/_4.3.16_PREFIX_MONET_GNU_32_d__/var/MonetDB/log" --set mapi_port=46316 --set sql_port=58861 --set monet_prompt= --trace --dbname=mTests_tests_BugsViaSourgeforce  < ID.914935.milS
# 22:18:29 >  

# Monet Database Server V4.3.16_rc05
# Copyright (c) 1993-2004, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit; dynamically linked.

VAR b := new(int,int);
VAR n := 10;
VAR i := 0;

WHILE (i < n) {
	i :+= 1;
	b.insert(i,i);
}
b.access(BAT_READ);

print(rangesplit(b,0));
!ERROR: BAThashsplit: number of ranges must not be less than 1!
!ERROR: CMDrangesplit: operation failed.
!ERROR: interpret_params: print(param 1): evaluation error.
print(rangesplit(b,-1));
!WARNING: BATrangesplit: reduced number of ranges (4294967295) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_71>	  ]
[ 2,	  <tmp_72>	  ]
[ 3,	  <tmp_73>	  ]
[ 4,	  <tmp_74>	  ]
[ 5,	  <tmp_75>	  ]
[ 6,	  <tmp_76>	  ]
[ 7,	  <tmp_77>	  ]
[ 8,	  <tmp_100>	  ]
[ 9,	  <tmp_101>	  ]
[ nil,	  <tmp_102>	  ]
print(rangesplit(b,1));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ nil,	  <tmp_64>	  ]
print(rangesplit(b,2));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 5,	  <tmp_103>	  ]
[ nil,	  <tmp_104>	  ]
print(rangesplit(b,5));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 2,	  <tmp_105>	  ]
[ 4,	  <tmp_106>	  ]
[ 6,	  <tmp_107>	  ]
[ 8,	  <tmp_110>	  ]
[ nil,	  <tmp_111>	  ]
print(rangesplit(b,n));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_112>	  ]
[ 2,	  <tmp_113>	  ]
[ 3,	  <tmp_114>	  ]
[ 4,	  <tmp_115>	  ]
[ 5,	  <tmp_116>	  ]
[ 6,	  <tmp_117>	  ]
[ 7,	  <tmp_120>	  ]
[ 8,	  <tmp_121>	  ]
[ 9,	  <tmp_122>	  ]
[ nil,	  <tmp_123>	  ]
print(rangesplit(b,n + 1));
!WARNING: BATrangesplit: reduced number of ranges (11) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 1,	  <tmp_124>	  ]
[ 2,	  <tmp_125>	  ]
[ 3,	  <tmp_126>	  ]
[ 4,	  <tmp_127>	  ]
[ 5,	  <tmp_130>	  ]
[ 6,	  <tmp_131>	  ]
[ 7,	  <tmp_132>	  ]
[ 8,	  <tmp_133>	  ]
[ 9,	  <tmp_134>	  ]
[ nil,	  <tmp_135>	  ]

print(hashsplit(b,0));
!ERROR: BAThashsplit: number of ranges must not be less than 1!
!ERROR: CMDhashsplit: operation failed.
!ERROR: interpret_params: print(param 1): evaluation error.
print(hashsplit(b,-1));
!WARNING: BAThashsplit: reduced number of ranges (4294967295) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_67>	  ]
[ 1,	  <tmp_70>	  ]
[ 2,	  <tmp_136>	  ]
[ 3,	  <tmp_137>	  ]
[ 4,	  <tmp_140>	  ]
[ 5,	  <tmp_141>	  ]
[ 6,	  <tmp_142>	  ]
[ 7,	  <tmp_143>	  ]
[ 8,	  <tmp_144>	  ]
[ 9,	  <tmp_145>	  ]
print(hashsplit(b,2));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_145>	  ]
[ 1,	  <tmp_144>	  ]
print(hashsplit(b,5));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_144>	  ]
[ 1,	  <tmp_145>	  ]
[ 2,	  <tmp_143>	  ]
[ 3,	  <tmp_142>	  ]
[ 4,	  <tmp_141>	  ]
print(hashsplit(b,1));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_64>	  ]
print(hashsplit(b,n));
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_141>	  ]
[ 1,	  <tmp_142>	  ]
[ 2,	  <tmp_143>	  ]
[ 3,	  <tmp_145>	  ]
[ 4,	  <tmp_144>	  ]
[ 5,	  <tmp_140>	  ]
[ 6,	  <tmp_137>	  ]
[ 7,	  <tmp_136>	  ]
[ 8,	  <tmp_70>	  ]
[ 9,	  <tmp_67>	  ]
print(hashsplit(b,n + 1));
!WARNING: BAThashsplit: reduced number of ranges (11) to number of tuples (10).
#-------------------------#
# h	tmp_31		  # name
# int	BAT		  # type
#-------------------------#
[ 0,	  <tmp_67>	  ]
[ 1,	  <tmp_70>	  ]
[ 2,	  <tmp_136>	  ]
[ 3,	  <tmp_137>	  ]
[ 4,	  <tmp_140>	  ]
[ 5,	  <tmp_144>	  ]
[ 6,	  <tmp_145>	  ]
[ 7,	  <tmp_143>	  ]
[ 8,	  <tmp_142>	  ]
[ 9,	  <tmp_141>	  ]
quit();

# 22:21:26 >  
# 22:21:26 >  Done.
# 22:21:26 >  

